--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -61,6 +61,27 @@
         app:layout_constraintTop_toBottomOf="@id/edtEmail"
         app:passwordToggleEnabled="true"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember me?"
+        app:layout_constraintEnd_toStartOf="@+id/swRememberMe"
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
+        android:layout_marginTop="19dp"
+        android:layout_marginRight="5dp" />
+
+
+    <Switch
+        android:id="@+id/swRememberMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textOff="no"
+        android:textOn="yes"
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="40dp"/>
+
     <Button
         android:id="@+id/btnSignIn"
         android:layout_width="0dp"
@@ -74,7 +95,7 @@
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/swRememberMe" />
 
     <TextView
         android:id="@+id/tvCreateAccount"
